--- a/experiments/experiment_top_k/config_1.yaml
+++ b/experiments/experiment_top_k/config_1.yaml
@@ -14,6 +14,7 @@ training:
   batch_size: 2
   num_epochs: 4
   gradient_accumulation_steps: 8
+  optim: "paged_adamw_32bit"
   warmup_ratio: 0.03
   learning_rate: 2e-5
   weight_decay: 0.001
