--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "dataset>=1.6.2",
     "evaluate>=0.4.3",
     "ipykernel>=6.29.5",
+    "peft>=0.15.2",
     "streamlit>=1.44.1",
     "torch>=2.6.0",
     "transformers>=4.51.1",
