--- a/experiments/reward_model/config_1.yaml
+++ b/experiments/reward_model/config_1.yaml
@@ -1,5 +1,5 @@
 experiment_name: "reward_model_llama3.2_1b"
-model_name: "meta-llama/Meta-Llama-3.2-1B"
+model_name: "meta-llama/Llama-3.2-1B"
 output_dir: "./models/reward_models/llama3.2-rm"
 data_file: "./data/reward_model_data.csv"
 max_length: 512
