--- a/experiments/experiments_models/qwen2.5-3b_base_model.yaml
+++ b/experiments/experiments_models/qwen2.5-3b_base_model.yaml
@@ -1,6 +1,6 @@
-experiment_name: "llama3.2-1b-qlora-mortgage"
-model_name: "meta-llama/Llama-3.2-1B"
-output_dir: "./models/llama3.2-1b-qlora-mortgage"
+experiment_name: "qwen2.5-3b-qlora-mortgage"
+model_name: "Qwen/Qwen2.5-3B-Instruct"
+output_dir: "./models/qwen2.5-3b-qlora-mortgage"
 data_dir: "./data"
 
 train_size: 1000
@@ -11,7 +11,7 @@ bnb:
   load_in_4bit: true
 
 training:
-  batch_size: 1
+  batch_size: 8
   num_epochs: 4
   gradient_accumulation_steps: 8
   optim: "paged_adamw_32bit"
