--- a/experiments/experiments_ppo/config_1.yaml
+++ b/experiments/experiments_ppo/config_1.yaml
@@ -1,12 +1,12 @@
 experiment_name: "llama3.2-qlora-ppo-w-llama3.2-rm"
 model_name: "meta-llama/Meta-Llama-3-8B"
-output_dir: "./models/llama3.2-qlora-ppo-w-llama3.2-rm"
-data_dir: "./data"
-
 policy_model_path: "./models/llama3.2-1b-qlora-mortgage"
 reward_model_path: "./models/reward_models/llama3.2-rm"
+output_dir: "./models/llama3.2-qlora-ppo-w-llama3.2-rm"
 
+data_dir: "./data"
 train_size: 1000
+test_size: 100
 
 training:
   num_epochs: 2
@@ -14,3 +14,8 @@ training:
   learning_rate: 1.41e-5
   weight_decay: 0.01
   lr_scheduler_type: "cosine"
+  
+test:
+  temperature: 0.1
+  top_p: 0.9
+  max_new_tokens: 512
